# AlgoVox

./: .env.example  .gitignore  README.md  SUPABASE_SETUP.md  SYSTEM_PROMPT.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  solution.py
dist-electron/: main.js  preload.js
electron/: audio.ts  llm.ts  main.ts  preload.ts  stt.ts  tts.ts
src/: App.css  App.tsx  AuthContext.tsx  Home.tsx  Landing.tsx  Login.tsx  Report.tsx  Session.tsx  electron.d.ts  index.css  oauth.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/algovox/: audio.py  interviewer.py  problems.py  server.py  system_prompt.py  transcribe.py  tts.py
src/components/: AudioCheckModal.tsx
src/lib/: promptBuilder.ts  questions.ts  sessionState.ts
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  Home.tsx  Login.tsx  Session.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
