[project]
name = "algovox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "faster-whisper>=1.2.1",
    "numpy>=2.4.2",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "webrtcvad-wheels>=2.0.14",
]
